Added sticky nav and accordion js functionality

--- a/wp-content/themes/kreartivci/sass/home.scss
+++ b/wp-content/themes/kreartivci/sass/home.scss
@@ -24,3 +24,5 @@ Text Domain: kreartivci
 
 /*SECTIONS*/
 @import "home/sections/header";
+@import "home/sections/main";
+@import "home/sections/about";
