--- a/wp-content/themes/kreartivci/sass/home/sections/_header.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_header.scss
@@ -3,13 +3,19 @@
     max-height: 70px;
     width:100%;
     padding-top:17px;
-    background:rgba(255,255,255,0.9);
-    top:0px;
-    border-bottom:1px solid lighten(#8f8f8f,30%);
+    top:-100px;
     overflow:hidden;
     transition: all 0.3s;
     padding-bottom:6px;
     z-index:200;
+    opacity:0;
+
+    &.sticky{
+        background-color: rgba(255, 255, 255, 0.93);
+        opacity: 1;
+        top: 0px;
+        border-bottom: 1px solid lighten(#8f8f8f, 30%);
+    }
 
     @include small{
         padding-top:25px;
