Added php sections partials and base contact section

--- a/wp-content/themes/kreartivci/sass/home.scss
+++ b/wp-content/themes/kreartivci/sass/home.scss
@@ -26,3 +26,5 @@ Text Domain: kreartivci
 @import "home/sections/header";
 @import "home/sections/main";
 @import "home/sections/about";
+@import "home/sections/contact";
+@import "home/sections/footer";
