--- a/wp-content/themes/kreartivci/sass/home/sections/_main.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_main.scss
@@ -18,6 +18,21 @@ section h1{
     text-align:center;
     line-height:1.8;
     padding:50px 0;
+    position:relative;
+    font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif !important;
+    font-weight: 400;
+
+    &:after{
+      content: '';
+      position: absolute;
+      bottom: 20%;
+      left: 48%;
+      width: 50px;
+      height: 3px;
+      margin: 0 auto;
+      background: #967ADC;
+      //background-color:#d8d8d8;
+    }
 }
 
 @media (min-width: 34em) {
