--- a/wp-content/themes/kreartivci/sass/home.scss
+++ b/wp-content/themes/kreartivci/sass/home.scss
@@ -26,6 +26,7 @@ Text Domain: kreartivci
 @import "home/sections/header";
 @import "home/sections/main";
 @import "home/sections/about";
+@import "home/sections/novosti";
 @import "home/sections/donatori";
 @import "home/sections/contact";
 @import "home/sections/footer";
