--- a/wp-content/themes/kreartivci/sass/home/sections/_about.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_about.scss
@@ -1,5 +1,15 @@
 .about-section{
+    position:relative;
+    
+    .about-image{
+        background-image:url('images/hero2.jpg');
+        background-size:cover;
+        background-repeat:no-repeat;
+        background-position:center;
+        height:450px;
+    }
     .accordion{
+        overflow:hidden;
         max-width:560px;
         margin:0 auto 100px;
         border-top: 1px solid lighten(#4a6e78,50%);
@@ -7,6 +17,7 @@
         li{
             border-bottom:1px solid lighten(#4a6e78,50%);
             position:relative;
+            background:#f8f7f7;
 
             p{
                 display:none;
@@ -22,6 +33,7 @@
                 text-indent:15px;
                 -moz-user-select: none;
                 user-select:none;
+                color:inherit;
 
                 &:after{
                     border-right:1px solid #4a6e78;
