Added single novost styles

--- a/wp-content/themes/kreartivci/sass/home/sections/_novosti.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_novosti.scss
@@ -37,3 +37,10 @@
         }
     }
 }
+
+/*NOVOST SINGLE*/
+.novost-single-title{
+    text-align: center;
+    margin-top:20px;
+}
+.novost-single-body img{max-width: 100%;}
