--- a/wp-content/themes/kreartivci/sass/home/sections/_about.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_about.scss
@@ -12,12 +12,14 @@
         overflow:hidden;
         max-width:560px;
         margin:0 auto 100px;
-        border-top: 1px solid lighten(#4a6e78,50%);
+        border-top: 1px solid lighten($color-secondary,50%);
+        @include small{
+            margin-top:25px;
+        }
 
         li{
-            border-bottom:1px solid lighten(#4a6e78,50%);
+            border-bottom:1px solid lighten($color-secondary,50%);
             position:relative;
-            background:#f8f7f7;
 
             p{
                 display:none;
@@ -36,8 +38,8 @@
                 color:inherit;
 
                 &:after{
-                    border-right:1px solid #4a6e78;
-                    border-bottom:1px solid #4a6e78;
+                    border-right:1px solid $color-secondary;
+                    border-bottom:1px solid $color-secondary;
                     position:absolute;
                     right:10px;
                     content:"";
