--- a/wp-content/themes/kreartivci/sass/home/_base.scss
+++ b/wp-content/themes/kreartivci/sass/home/_base.scss
@@ -2,6 +2,7 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,900&subset=latin,latin-ext);
 @import url(https://fonts.googleapis.com/css?family=Arvo);
+@import url(https://fonts.googleapis.com/css?family=Marck+Script);
 
 // The base font-size is set at 62.5% for having the convenience
 // of sizing rems in a way that is similar to using px. 1.6rem=16px
