Fixed google map location on both pages and added article single margin on item \

--- a/wp-content/themes/kreartivci/sass/owl/_owl.scss
+++ b/wp-content/themes/kreartivci/sass/owl/_owl.scss
@@ -68,7 +68,7 @@
   -moz-transform: translate3d(0,0,0);
   -ms-transform: translate3d(0,0,0);
 }
-
+.owl-item{margin-left:1px;}
 /*THEME*/
 /*
 * 	Owl Carousel Owl Demo Theme 
