Optimized query for novosti on landing page

--- a/wp-content/themes/kreartivci/sass/home/_form.scss
+++ b/wp-content/themes/kreartivci/sass/home/_form.scss
@@ -19,7 +19,7 @@ select {
   padding: 0.6rem 1rem;
   width: 100%;
   &:focus {
-    border: 0.1rem solid $color-primary;
+    border: 0.1rem solid $color-primary-2;
     outline: 0;
   }
 }
