--- a/wp-content/themes/kreartivci/sass/home/sections/_header.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_header.scss
@@ -38,7 +38,7 @@
         padding-top:5px;
         margin-bottom:10px;
         font-family:'Marck Script', cursive;
-        color:#967ADC;
+        color:$color-primary-2;
         @include small{
             float:none;
         }
