--- a/wp-content/themes/kreartivci/sass/shop/_btn.scss
+++ b/wp-content/themes/kreartivci/sass/shop/_btn.scss
@@ -29,7 +29,7 @@
   @include defaultBtn;
 
   //Normal button style
-  color: $white; background-color: #967ADC; border: 0px;
+  color: $white; background-color: $color-primary-2; border: 0px;
 
   //Normal button hover
   &:hover { opacity: 0.8; }
@@ -61,7 +61,7 @@
     @include defaultBtn;
 
     //Outline button style
-    color: $blue1; background-color: rgba(0,0,0,0); border: 1px solid #967ADC;
+    color: $blue1; background-color: rgba(0,0,0,0); border: 1px solid $color-primary-2;
 
     //Outline button hover
     &:hover { color: $white; background-color: $blue1; }
