--- a/wp-content/themes/kreartivci/sass/shop/_variables.scss
+++ b/wp-content/themes/kreartivci/sass/shop/_variables.scss
@@ -12,6 +12,7 @@ $grey3: #f1f5fa; //Used for blocks background
 //Blue colors
 $blue1: #09a0f6;
 $blue2: #d1e1e8;
+$color-primary-2: #cc28bc;
 
 //Button Colors
 $green1: #7CB342;
