--- a/wp-content/themes/kreartivci/sass/home/_colors.scss
+++ b/wp-content/themes/kreartivci/sass/home/_colors.scss
@@ -3,6 +3,7 @@
 
 $color-initial: white !default;
 $color-primary: #9b4dca !default;
+$color-primary-2:#cc28bc !default;
 $color-secondary: #606c76 !default;
 $color-tertiary: #f4f5f6 !default;
 $color-quaternary: #d1d1d1 !default;
