--- a/wp-content/themes/kreartivci/sass/home/_link.scss
+++ b/wp-content/themes/kreartivci/sass/home/_link.scss
@@ -2,7 +2,7 @@
 // ––––––––––––––––––––––––––––––––––––––––––––––––––
 
 a {
-  color: $color-primary;
+  color: $color-primary-2;
   text-decoration: none;
   &:hover {
     color: $color-secondary;
