--- a/wp-content/themes/kreartivci/sass/home/sections/_main.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_main.scss
@@ -30,7 +30,7 @@ section h1{
       width: 50px;
       height: 3px;
       margin: 0 auto;
-      background: #967ADC;
+      background: $color-primary-2;
       //background-color:#d8d8d8;
     }
 }
