--- a/wp-content/themes/kreartivci/sass/home/sections/_novosti.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_novosti.scss
@@ -16,7 +16,7 @@
 
             &:hover{
                 .novost-title{
-                    color:#967ADC;
+                    color:$color-primary-2;
                 }
             }
 
