--- a/wp-content/themes/kreartivci/sass/shop/_globals.scss
+++ b/wp-content/themes/kreartivci/sass/shop/_globals.scss
@@ -16,8 +16,8 @@ body{
     background-size:20%;
     width:100%;
     overflow-x:hidden;
-    border-top:3px solid #967ADC;
-    border-bottom:5px solid #967ADC;
+    border-top:3px solid $color-primary-2;
+    border-bottom:5px solid $color-primary-2;
     font-family: 'OpenSans', 'Open Sans';
 }
 
