--- a/wp-content/themes/kreartivci/sass/shop/_product-single.scss
+++ b/wp-content/themes/kreartivci/sass/shop/_product-single.scss
@@ -17,7 +17,7 @@
     left:0;
     width:100%;
     height:100%;
-    background:rgba(#967ADC,0.85);
+    background:rgba($color-primary-2,0.85);
     z-index:9999;
     display:flex;
     justify-content: center;
@@ -64,7 +64,7 @@
     .price{
         font-size: rem(28px);
         font-weight: 600;
-        color: #967ADC;
+        color: $color-primary-2;
         margin:15px 0;
         letter-spacing: 2px;
         line-height: 110%;
