Changed navigation last item and width, and made breadcrumb path on single template

--- a/wp-content/themes/kreartivci/sass/home/sections/_header.scss
+++ b/wp-content/themes/kreartivci/sass/home/sections/_header.scss
@@ -46,13 +46,13 @@
 
     nav{
         float:right;
-        width:60%;
+        width:80%;
         @include small{width:100%;}
 
         ul{
             list-style: none;
             overflow: hidden;
-            text-align: right;
+            text-align: center;
             float:right;
             @include small{
                 padding-top:10px;
